--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "antd": "^5.16.4",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "cookiejs": "^2.1.3",
     "date-fns": "^2.30.0",
     "google-libphonenumber": "^3.2.34",
@@ -29,6 +29,7 @@
     "prop-types": "^15.8.1",
     "quill-blot-formatter-es": "^0.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
